<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <!-- 专栏《虚拟电厂系统开发实战》配套示例工程：父 POM，统一依赖与插件管理 -->
    <groupId>com.openvpp</groupId>
    <artifactId>openvpp-demo</artifactId>
    <version>1.0.0</version>
    <packaging>pom</packaging>
    <name>openvpp-demo</name>
    <description>Virtual Power Plant demo project for the column, abstracted and sanitized</description>

    <modules>
        <module>openvpp-common</module>
        <module>openvpp-gateway</module>
        <module>openvpp-iot</module>
        <module>openvpp-resource</module>
        <module>openvpp-assessment</module>
        <module>openvpp-aggregator</module>
        <module>openvpp-dispatch</module>
        <module>openvpp-settlement</module>
        <module>openvpp-market</module>
        <module>openvpp-edge</module>
        <module>openvpp-app</module>
    </modules>

    <properties>
        <java.version>11</java.version>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <spring-boot.version>2.7.18</spring-boot.version>
        <mybatis-plus.version>3.4.0</mybatis-plus.version>
        <paho.version>1.2.5</paho.version>
        <californium.version>3.9.1</californium.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${spring-boot.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <!-- 内部模块统一版本 -->
            <dependency>
                <groupId>com.openvpp</groupId>
                <artifactId>openvpp-common</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.openvpp</groupId>
                <artifactId>openvpp-gateway</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.openvpp</groupId>
                <artifactId>openvpp-iot</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.openvpp</groupId>
                <artifactId>openvpp-resource</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.openvpp</groupId>
                <artifactId>openvpp-assessment</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.openvpp</groupId>
                <artifactId>openvpp-aggregator</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.openvpp</groupId>
                <artifactId>openvpp-dispatch</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.openvpp</groupId>
                <artifactId>openvpp-settlement</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.openvpp</groupId>
                <artifactId>openvpp-market</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.openvpp</groupId>
                <artifactId>openvpp-edge</artifactId>
                <version>${project.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-maven-plugin</artifactId>
                    <version>${spring-boot.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.11.0</version>
                    <configuration>
                        <!-- 工程承诺 Java 11：release 锁定编译目标与 JDK API 面，
                             高版本 JDK 编译时拒绝 Java 12+ API（如 Stream.toList()） -->
                        <release>11</release>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
</project>
